add firebase login and data

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -77,6 +77,10 @@ target 'tiaRosa' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
+  pod 'RNCPicker', :path => '../node_modules/@react-native-community/picker'
+
   target 'tiaRosaTests' do
     inherit! :complete
     # Pods for testing
