--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "^1.6.5",
+    "@react-native-firebase/app": "^7.3.0",
+    "@react-native-firebase/auth": "^8.0.7",
+    "@react-native-firebase/firestore": "^7.2.1",
     "@react-navigation/native": "react-navigation/native",
     "@react-navigation/stack": "^5.5.1",
+    "firebase": "^7.15.3",
     "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.2",
